# immolate

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: main.yml
src/: main.rs
